--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <meta property="og:url" content="https://gusalhazred.github.io/CV/" />
     <meta property="og:image" content="https://cdn.pixabay.com/photo/2018/08/13/22/53/resume-3604240_1280.jpg" />
     
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles/style.css">
 
