--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,7 +12,7 @@
     <meta property="og:title" content="CV - Gustavo Martinez" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://gusalhazred.github.io/CV/" />
-    <meta property="og:image" content="https://cdn.pixabay.com/photo/2018/08/13/22/53/resume-3604240_1280.jpg" />
+    <meta property="og:image" content="https://www.cvwizard.es/favicon-512.png" />
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
