--- a/index.html
+++ b/index.html
@@ -17,51 +17,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/mediaQuery.css">
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Signika+Negative:wght@300&display=swap" rel="stylesheet">
-
 </head>
 <body>
-    <header class="d-flex">
-        <img src="https://cdn.pixabay.com/photo/2015/03/29/08/47/entrepreneur-696966_1280.jpg" class="col-4" alt="">
-        <section class="col">
+    <header class="d-flex flex-column flex-lg-row align-items-center ">
+        <img src="https://cdn.pixabay.com/photo/2015/03/29/08/47/entrepreneur-696966_1280.jpg" class="m-3 m-lg-4 col-11 col-lg-4" alt="">
+        <section class="col-7 d-flex flex-column justify-content-center">
             <h1 class="titulo">Gustavo C. Martinez</h1>
             <p class="subtitulo">Desarrollador Web</p>
         </section>
     </header>
-    <main class="d-flex">
-        <aside>
-            <section>
-                <h2>Idiomas</h2>
-                <p class="elementosAside">Ingles Tecnico: Intermedio</p>
-            </section>
-            <section>
-                <h2>Educacion</h2>
-                <article class="elementosAside">
-                    <p>Curso. JavaScript</p>
-                    <p>Julio 2022 - Agosto 2022</p>
-                    <p>Coderhouse</p>
-                </article>
-                <article class="elementosAside">
-                    <p>Curso. Desarrollo Web</p>
-                    <p>Marzo 2022 - Mayo 2022</p>
-                    <p>Coderhouse</p>
-                </article>
-                <article class="elementosAside">
-                    <p>Terceario. Tecnico Analista de Sistemas</p>
-                    <p>Marzo 2013 - Mayo 2014</p>
-                    <p>Instituto Superior de Formación Técnica N° 172</p>
-                </article>
-            </section>
-            <section>
-                <h4>Ademas, tengo algunos conocimientos de:</h4>
-                <p class="elementosAside">Pascal, Delphi, .net, C, MySQL, Node.Js, Arduino, Figma</p>
-            </section>
-        </aside>
+    <main class="d-lg-flex flex-row-reverse container">
         <section>
             <article>
                 <h2>Tecnologias</h2>
@@ -89,8 +61,37 @@
                 </ul>
             </article>
         </section>
+        <aside class="">
+            <section>
+                <h2>Idiomas</h2>
+                <p class="elementosAside">Ingles Tecnico: Intermedio</p>
+            </section>
+            <section>
+                <h2>Educacion</h2>
+                <article class="elementosAside">
+                    <p>Curso. JavaScript</p>
+                    <p>Julio 2022 - Agosto 2022</p>
+                    <p>Coderhouse</p>
+                </article>
+                <article class="elementosAside">
+                    <p>Curso. Desarrollo Web</p>
+                    <p>Marzo 2022 - Mayo 2022</p>
+                    <p>Coderhouse</p>
+                </article>
+                <article class="elementosAside">
+                    <p>Terceario. Tecnico Analista de Sistemas</p>
+                    <p>Marzo 2013 - Mayo 2014</p>
+                    <p>Instituto Superior de Formación Técnica N° 172</p>
+                </article>
+            </section>
+            <section>
+                <h4 class="notaAlPie">Ademas, tengo algunos conocimientos de:</h4>
+                <p class="elementosAside">Pascal, Delphi, .net, C, MySQL, Node.Js, Arduino, Figma</p>
+            </section>
+        </aside>
+        
     </main>
-    <footer>
+    <footer class="container">
         <h2>Contactos</h2>
     </footer>
 </body>
