Agregue las redes

--- a/index.html
+++ b/index.html
@@ -101,15 +101,24 @@
         <h3>Mis redes</h3>
         <section>
             <article class="row">
-                <div class="col">
-                    <p>GitHub</p>
-                </div>
-                <div class="col">
-                    <p>Linkedin</p>
-                </div>
-                <div class="col">
-                    <p>Whatsapp</p>
-                </div>
+                <a href="https://github.com/GusAlhazred" class="col m-3">
+                    <div class=" d-flex flex-column align-items-center">
+                        <i class="fa-brands fa-github"></i>
+                        <p>GitHub</p>
+                    </div>
+                </a>
+                <a href="https://www.linkedin.com/in/gustavo-m-14a94b244/" class="col m-3">
+                    <div class="col d-flex flex-column align-items-center">
+                        <i class="fa-brands fa-linkedin"></i>
+                        <p>Linkedin</p>
+                    </div>
+                </a>
+                <a href="https://api.whatsapp.com/send?phone=541156665058" target="_blank" class="col m-3">
+                    <div class="col d-flex flex-column align-items-center">
+                        <i class="fa-brands fa-square-whatsapp"></i>
+                        <p>Whatsapp</p>
+                    </div>
+                </a>
             </article>
         </section>
     </footer>
