Agregue que se abra en una nueva pagina

--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
         <h3>Mis redes</h3>
         <section>
             <article class="row">
-                <a href="https://github.com/GusAlhazred" class="col m-3">
+                <a href="https://github.com/GusAlhazred" target="_blank" class="col m-3">
                     <div class=" d-flex flex-column align-items-center">
                         <i class="fa-brands fa-github"></i>
                         <p>GitHub</p>
                     </div>
                 </a>
-                <a href="https://www.linkedin.com/in/gustavo-m-14a94b244/" class="col m-3">
+                <a href="https://www.linkedin.com/in/gustavo-m-14a94b244/" target="_blank" class="col m-3">
                     <div class="col d-flex flex-column align-items-center">
                         <i class="fa-brands fa-linkedin"></i>
                         <p>Linkedin</p>
